added atributes for modals and fixed  border in modal-feedback

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -9,7 +9,7 @@
       <div class="hero-btns">
         <ul class="hero-list">
           <li class="hero-list__link">
-            <button class="hero-list__btn1" type="button">Buy now</button>
+            <button class="hero-list__btn1" type="button" data-open-buy>Buy now</button>
           </li>
           <li class="hero-list__link">
             <a href="#video" class="hero-list__btn2">How it's made?</a>
