--- a/src/sass/components/_modal-feedback.scss
+++ b/src/sass/components/_modal-feedback.scss
@@ -52,6 +52,7 @@ max-width: 229px;
         bottom: 0;
         width: 243px;
         height: 205px;
+        border-bottom-left-radius:14px;
     }
 }   
 
