--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -14,7 +14,7 @@
           />
           <h2 class="products-list__name">orange</h2>
           <p class="products-list__type">Dark chocolate</p>
-          <button type="button" class="products-list__btn">45 UAH</button>
+          <button type="button" class="products-list__btn" data-open-buy>45 UAH</button>
         </li>
         <li class="products-list__item swiper-slide">
           <img
@@ -25,7 +25,7 @@
           />
           <h2 class="products-list__name">APPLE&CRANBERRY</h2>
           <p class="products-list__type">Milk chocolate</p>
-          <button type="button" class="products-list__btn">50 UAH</button>
+          <button type="button" class="products-list__btn" data-open-buy>50 UAH</button>
         </li>
         <li class="products-list__item swiper-slide">
           <img
@@ -36,7 +36,7 @@
           />
           <h2 class="products-list__name">lime&sea salt</h2>
           <p class="products-list__type">Dark chocolate</p>
-          <button type="button" class="products-list__btn">66 UAH</button>
+          <button type="button" class="products-list__btn" data-open-buy>66 UAH</button>
         </li>
         <li class="products-list__item swiper-slide">
           <img
@@ -47,7 +47,7 @@
           />
           <h2 class="products-list__name">pineapple</h2>
           <p class="products-list__type">Dark chocolate</p>
-          <button type="button" class="products-list__btn">54 UAH</button>
+          <button type="button" class="products-list__btn" data-open-buy>54 UAH</button>
         </li>
         <li class="products-list__item swiper-slide">
           <img
@@ -58,7 +58,7 @@
           />
           <h2 class="products-list__name">Classic</h2>
           <p class="products-list__type">Milk chocolate</p>
-          <button type="button" class="products-list__btn">45 UAH</button>
+          <button type="button" class="products-list__btn" data-open-buy>45 UAH</button>
         </li>
         <li class="products-list__item swiper-slide">
           <img
@@ -69,7 +69,7 @@
           />
           <h2 class="products-list__name">Honey</h2>
           <p class="products-list__type">Milk chocolate</p>
-          <button type="button" class="products-list__btn">50 UAH</button>
+          <button type="button" class="products-list__btn" data-open-buy>50 UAH</button>
         </li>
         <li class="products-list__item swiper-slide">
           <img
@@ -80,7 +80,7 @@
           />
           <h2 class="products-list__name">Roasted fruits</h2>
           <p class="products-list__type">Dark chocolate</p>
-          <button type="button" class="products-list__btn">66 UAH</button>
+          <button type="button" class="products-list__btn" data-open-buy>66 UAH</button>
         </li>
         <li class="products-list__item swiper-slide">
           <img
@@ -91,7 +91,7 @@
           />
           <h2 class="products-list__name">Classic</h2>
           <p class="products-list__type">White chocolate</p>
-          <button type="button" class="products-list__btn">54 UAH</button>
+          <button type="button" class="products-list__btn" data-open-buy>54 UAH</button>
         </li>
       </ul>
       <div class="swiper-pagination"></div>
