--- a/src/sass/components/_modal-review.scss
+++ b/src/sass/components/_modal-review.scss
@@ -6,142 +6,194 @@
   z-index: 99;
   width: 100%;
   height: 100%;
-  background-color: getcolor('black-color');
+  background-color: rgba(0, 0, 0, 0.158);
+  overflow: auto;
 }
 
 .review-modal {
-  position: absolute;
-  z-index: 100;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 311px;
   border-radius: 15px;
+  overflow: auto;
   background-color: getcolor('white-color');
-  padding: 32px 32px 32px 24px;
+  padding: 32px 24px;
 
   @media screen and (min-width: 768px) {
     width: 517px;
-    height: 631px;
-  }
-  &__close{
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      background-color: transparent;
-      border: none;
-      position: absolute;
-      right: 14px;
-      top: 14px;
-      width: 24px;
-      height: 24px;
-  }
-  &__svg {
-    width: 16px;
-    height: 16px;
-    color: getcolor('balck-color');
-  }
-  &__title {
-      color: getcolor('black-color');
-      font-size: 20px;
-      font-weight: 600;
-      line-height: 24px;
-      letter-spacing: -0.6px;
-      text-transform: uppercase;
-      margin-bottom: 32px;
-      
-      @media screen and (min-width: 768px) {
-        max-width: 298px;
-        font-size: 24px;
-        line-height: 28px;
-        letter-spacing: -0.72px;
-        margin-bottom: 40px;
-      }
-      &--orange{
-          color:getcolor('orange-color');
-      }
-    }
-    
-}
+    padding: 40px;
 
-.review-list{
-  &__btn {
-    position: absolute;
-    top: 14px;
-    right: 14px;
-    border: none;
-    background-color: getcolor('orange-color');
+  }
+
+  &__close {
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    background-color: transparent;
+    border: none;
+    position: absolute;
+    right: 14px;
+    top: 14px;
     width: 24px;
     height: 24px;
+
+    @media screen and (min-width: 768px) {
+      width: 28px;
+      top: 24px;
+      right: 24px;
+      height: 28px;
+
+    }
+  }
+
+  &__svg {
+    width: 12px;
+    height: 12px;
+    fill: #111;
+
+    @media screen and (min-width: 768px) {
+      width: 14px;
+      height: 14px;
+
+    }
+  }
+
+  &__title {
+    color: getcolor('black-color');
+    font-size: 20px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: -0.6px;
+    text-transform: uppercase;
+    margin-bottom: 32px;
+
+    @media screen and (min-width: 768px) {
+      max-width: 298px;
+      font-size: 24px;
+      line-height: 28px;
+      letter-spacing: -0.72px;
+      margin-bottom: 40px;
+    }
+
+    &--orange {
+      color: getcolor('orange-color');
+    }
+  }
+
+  &__btn {
+    padding: 12px 28px;
+    border-radius: 100px;
+    color: getcolor('white-color');
+    border: none;
+    background-color: getcolor('orange-color');
+    font-size: 14px;
+    font-weight: 600;
+
     &:hover {
       border-radius: 50%;
     }
+
     @media screen and (min-width: 768px) {
-      top: 24px;
-      right: 24px;
-      width: 40px;
-      height: 40px;
+      padding: 14px 40px;
     }
+  }
+
 }
-    &__input {
-        width: 100%;
-        padding: 18px 14px;
-        margin-bottom: 14px;
-        font-size: 14px;
-        font-weight: 400;
-        line-height: normal;
-        letter-spacing: -0.28px;
-        align-self: stretch;
-        border-radius: 13px;
-        border: 1.5px solid getcolor('gray-color');
-        &:active,
-        &:focus {
-          border: 2px solid getcolor('orange-color');
-        }
-        @media screen and (min-width: 768px) {
-          padding: 22px 24px;
-          margin-bottom: 19px;
-          font-size: 18px;
-          letter-spacing: -0.36px;
-          width: 437px;
-        }
-      }
-    &__tel {
-        border-radius: 13px;
-        border: 1.5px solid getcolor('gray-color');
-        max-width: 263px;
-        padding-left: 105px ;
-      
-        padding-top: 17px;
-        padding-bottom: 17px;
-        @media screen and (min-width: 768px) {
-          max-width: 513px;
-          padding-left: 125px ;
-        }
-      }
-      &__textarea {
-        display: block;
-        width: 100%;
-        border-radius: 13px;
-        border: 1.5px solid getcolor('black-color');
-        font-size: 14px;
-        font-weight: 400;
-        line-height: normal;
-        letter-spacing: -0.28px;
-        margin-bottom: 18px;
-        padding: 14px 18px 60px 18px;
-        margin-top: 14px;
-        &::placeholder {
-          color: getcolor('gray-color');
-        }
-        &:active,
-        &:focus {
-          border: 2px solid getcolor('orange-color');
-        }
-        @media screen and (min-width: 768px) {
-          padding: 22px 24px 93px 24px;
-          margin-top: 19px;
-          font-size: 18px;
-          letter-spacing: -0.36px;
-        }
-      }
+
+.review-list {
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+  margin-bottom: 18px;
+
+  @media screen and (min-width: 768px) {
+    gap: 19px;
+  }
+
+  &__input {
+    width: 100%;
+    padding: 14px 18px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.28px;
+    align-self: stretch;
+    border-radius: 8px;
+    border: 1.5px solid getcolor('gray-color');
+    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.03);
+
+    &:active,
+    &:focus {
+      border: 2px solid getcolor('orange-color');
+    }
+
+    @media screen and (min-width: 768px) {
+      padding: 22px 24px;
+      border-radius: 13px;
+    }
+
+  }
+
+  &__img {
+    width: 24px;
+    height: 18px;
+    position: absolute;
+    top: 35px;
+    left: 18px;
+
+    @media screen and (min-width: 768px) {
+      width: 32px;
+      height: 24px;
+      top: 43px;
+      left: 24px;
+    }
+  }
+
+  &__tel {
+    position: relative;
+    border-radius: 13px;
+    border: 1.5px solid getcolor('gray-color');
+    max-width: 263px;
+    padding-left: 105px;
+
+    padding-top: 17px;
+    padding-bottom: 17px;
+
+    @media screen and (min-width: 768px) {
+      max-width: 513px;
+      padding-left: 125px;
+    }
+  }
+
+  &__textarea {
+    display: block;
+    width: 100%;
+    border-radius: 13px;
+    border: 1.5px solid getcolor('black-color');
+    font-size: 14px;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.28px;
+    margin-bottom: 18px;
+    padding: 14px 18px 60px 18px;
+    margin-top: 14px;
+
+    &::placeholder {
+      color: getcolor('gray-color');
+    }
+
+    &:active,
+    &:focus {
+      border: 2px solid getcolor('orange-color');
+    }
+
+    @media screen and (min-width: 768px) {
+      padding: 22px 24px 93px 24px;
+      margin-top: 19px;
+      font-size: 18px;
+      letter-spacing: -0.36px;
+    }
+  }
 }
