--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,7 +33,7 @@
             <a href="#sellers" class="navigation-list__link">Top sellers</a>
           </li>
           <li class="navigation-list__item">
-            <a href="#review" class="navigation-list__link">Chocolate is loved</a>
+            <a href="#reviews" class="navigation-list__link">Chocolate is loved</a>
           </li>
         </ul>
       </nav>
