--- a/src/sass/components/_modal-review.scss
+++ b/src/sass/components/_modal-review.scss
@@ -102,6 +102,7 @@
   }
 
   &__input {
+    outline: none;
     width: 100%;
     padding: 14px 18px;
     border-radius: 8px;
@@ -169,6 +170,7 @@
   }
 
   &__textarea {
+    outline: none;
     width: 100%;
     height: 91px;
     resize: none;
@@ -176,6 +178,11 @@
     box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.03);
     padding: 14px 18px;
     border: 1.5px solid rgba(17, 17, 17, 0.05);
+
+    &:active,
+    &:focus {
+      border: 2px solid getcolor('orange-color');
+    }
 
     &::placeholder {
       color: getcolor('gray-color');
