--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -62,6 +62,10 @@
       @extend %orange-btn;
       @include fonts($line-height: 17px);
     }
+    &__btn1:hover {
+      background-color: #fcf1e0;
+      color: getcolor('orange-color');
+    }
     &__btn2 {
       display: flex;
       align-items: center;
@@ -74,6 +78,10 @@
       color: getcolor('advantages-color');
       font-family: 'Montserrat', sans-serif;
       @include fonts($font-weight: 600, $line-height: 17px, $font-size: 14px);
+    }
+    &__btn2:hover {
+      border: 1px solid getcolor('orange-color');
+      color: getcolor('orange-color');
     }
   }
   &-scroll {
@@ -88,6 +96,15 @@
     @media screen and (min-width: 1200px) {
       margin-left: 585px;
     }
+  }
+
+  &-scroll:hover .hero-scroll__link {
+    background-color: getcolor('orange-color');
+    transition: background-color 250ms;
+  }
+  &-scroll:hover .hero-scroll__svg {
+    fill: getcolor('white-color');
+    transition: fill 250ms;
   }
   &-scroll__down {
     margin-right: 12px;
@@ -117,10 +134,14 @@
     border-radius: 50%;
     width: 28px;
     height: 28px;
+    background-color: rgb(255, 255, 255);
     @media screen and (min-width: 768px) {
       width: 38px;
       height: 38px;
     }
-    background-color: rgb(255, 255, 255);
   }
+  // &-scroll__link:hover {
+  //   background-color: getcolor('orange-color');
+  //   transition: background-color 250ms;
+  // }
 }
